--- a/web20.css
+++ b/web20.css
@@ -42,18 +42,34 @@ height:30px;
 thead th, tfoot th {
 padding:5px;
 }
-table a {
+
+a:link {
 color: red;
 text-decoration:none;
 }
-table a:hover {
+
+a:visited {
+color: red;
+text-decoration:none;
+}
+
+a:hover {
 text-decoration:underline;
 }
+
 tr.odd {
 background: #f1f1f1;
 }
+
 tbody th, tbody td {
 padding:5px;
+}
+
+p {
+  color:black;
+  font: normal 12px verdana, arial, helvetica, sans-serif;
+  text-align:left;
+  margin:0px;
 }
 
 p.note{
